# issue-rust-analyzer-tests-bazel

./: .gitignore  MODULE.bazel  gen_rust_project.sh  rust-project.json
rs/engine/: BUILD.bazel  Cargo.toml
rs/engine/src/: lib.rs
