module(
    name = "monorepo",
    repo_name = "monorepo",
)

bazel_dep(name = "rules_rust", version = "0.51.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
)
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//rs:Cargo.lock",
    manifests = [
        "//rs/engine:Cargo.toml",
        "//rs:Cargo.toml",
    ],
)

use_repo(crate, "crates")
